Add main and h1 styling

--- a/projects/editor-tester/src/styles.scss
+++ b/projects/editor-tester/src/styles.scss
@@ -7,16 +7,11 @@ body {
     "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-button {
-  border: 1px solid #2a5ea5;
-  background-color: #21497f;
-  color: white;
-  padding: 10px 15px;
-  transition: all 0.3s ease;
-
-  &:hover {
-    background-color: #2a5ea5;
-  }
+main {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  gap: 10px;
 }
 
 section {
@@ -27,4 +22,20 @@ section {
   border-radius: 20px;
   padding: 5px 25px 25px 25px;
   margin: 10px;
+}
+
+h1 {
+  text-align: center;
+}
+
+button {
+  border: 1px solid #2a5ea5;
+  background-color: #21497f;
+  color: white;
+  padding: 10px 15px;
+  transition: all 0.3s ease;
+
+  &:hover {
+    background-color: #2a5ea5;
+  }
 }
