--- a/projects/editor-tester/src/app/app.component.html
+++ b/projects/editor-tester/src/app/app.component.html
@@ -1,38 +1,9 @@
-<h1>ngx-monaco-editor demo</h1>
+<main>
+  <h1>ngx-monaco-editor demo</h1>
 
-<hr />
+  <!-- Switch Language Example -->
+  <app-switch-language />
 
-<h2>Editor</h2>
-<button (click)="updateOptions()">Change Language</button>
-<button (click)="code = ''; codeInput = ''">Set Value To Empty String</button>
-<button (click)="code = null; codeInput = null">Set Value To Null</button>
-<button (click)="code = undefined; codeInput = undefined">Set Value To undefined</button>
-<button (click)="showMultiple = !showMultiple">
-  {{ showMultiple ? "Hide" : "Show" }} Multiple Editor
-</button>
-
-<div style="height: 100px">
-  <ngx-monaco-editor
-    style="height: 100%"
-    [options]="options"
-    [(ngModel)]="code"
-    (onInit)="onInit($event)"
-  ></ngx-monaco-editor>
-</div>
-
-<ngx-monaco-editor *ngIf="showMultiple" [options]="options" [(ngModel)]="code"></ngx-monaco-editor>
-
-<pre>{{ code | json }}</pre>
-
-<hr />
-
-<h2>Diff Editor</h2>
-<button (click)="updateDiffModel()">Update Models</button>
-<ngx-monaco-diff-editor
-  [options]="options"
-  [originalModel]="originalModel"
-  [modifiedModel]="modifiedModel"
-  (onInit)="onInitDiffEditor($event)"
-></ngx-monaco-diff-editor>
-
-<ngx-monaco-editor [options]="options" [model]="model"></ngx-monaco-editor>
+  <!-- Diff Editor Example -->
+  <app-diff-editor />
+</main>
