--- a/projects/editor-tester/src/app/examples/diff-editor/diff-editor.component.html
+++ b/projects/editor-tester/src/app/examples/diff-editor/diff-editor.component.html
@@ -1,10 +1,12 @@
 <section>
   <h3>Diff Editor Exmaple</h3>
 
-  <ngx-monaco-diff-editor
-    [options]="options"
-    [originalModel]="originalCode"
-    [modifiedModel]="modifiedCode"
-    (onInit)="onEditorInit($event)"
-  ></ngx-monaco-diff-editor>
+  <div class="ngx-monaco-editor-container">
+    <ngx-monaco-diff-editor
+      [options]="options"
+      [originalModel]="originalCode"
+      [modifiedModel]="modifiedCode"
+      (onInit)="onEditorInit($event)"
+    ></ngx-monaco-diff-editor>
+  </div>
 </section>
