--- a/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
+++ b/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
@@ -7,9 +7,11 @@
     </button>
   </div>
 
-  <ngx-monaco-editor
-    [options]="options"
-    [(ngModel)]="code"
-    (onInit)="onEditorInit($event)"
-  ></ngx-monaco-editor>
+  <div class="ngx-monaco-editor-container">
+    <ngx-monaco-editor
+      [options]="options"
+      [(ngModel)]="code"
+      (onInit)="onEditorInit($event)"
+    ></ngx-monaco-editor>
+  </div>
 </section>
