--- a/projects/editor-tester/src/styles.scss
+++ b/projects/editor-tester/src/styles.scss
@@ -22,6 +22,11 @@ section {
   border-radius: 20px;
   padding: 5px 25px 25px 25px;
   margin: 10px;
+  transition: all 0.3s ease;
+
+  &:hover {
+    border-color: #2a5ea5;
+  }
 }
 
 h1 {
