--- a/projects/editor-tester/src/app/app.component.html
+++ b/projects/editor-tester/src/app/app.component.html
@@ -1,6 +1,6 @@
 <main>
   <h1>ngx-monaco-editor demo</h1>
-
+  <app-splitter-example />
   <!-- Switch Language Example -->
   <app-switch-language />
 
@@ -9,4 +9,6 @@
 
   <!-- JSON Editor Example -->
   <app-json-editor />
+
+  <!-- Angular Splitter Example -->
 </main>
