--- a/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
+++ b/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
@@ -1,6 +1,11 @@
 <section>
   <h3>Angular Splitter Exmaple</h3>
 
+  <p>
+    This example shows how to use the
+    <a href="https://github.com/angular-split/angular-split" target="_blank"> Angular Splitter </a>
+  </p>
+
   <div>
     <button (click)="toggleSplitterDirection()">
       {{ splitterDirection === "horizontal" ? "Change to Vertical" : "Change to Horizontal" }}
