--- a/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
+++ b/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
@@ -27,7 +27,7 @@
 
       <!-- Preview Area -->
       <as-split-area [size]="50" [minSize]="30">
-        <div [innerHTML]="code"></div>
+        <div [innerHTML]="code" class="html-preview"></div>
       </as-split-area>
     </as-split>
   </div>
