--- a/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
+++ b/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
@@ -3,7 +3,7 @@
 
   <div>
     <button (click)="changeLanguage()">
-      {{ options.language === "php" ? "Change to JS" : "Change to PHP" }}
+      {{ options.language === "php" ? "Switch to JS Example" : "Switch to PHP Example" }}
     </button>
   </div>
 
