Add editor theme switch example

--- a/projects/editor-tester/src/app/app.component.html
+++ b/projects/editor-tester/src/app/app.component.html
@@ -12,4 +12,7 @@
 
   <!-- JSON Editor Example -->
   <app-json-editor />
+
+  <!-- Theme Switch Example -->
+  <app-theme-switch-example />
 </main>
