--- a/projects/editor-tester/src/app/examples/theme-switch-example/theme-switch-example.component.html
+++ b/projects/editor-tester/src/app/examples/theme-switch-example/theme-switch-example.component.html
@@ -7,21 +7,23 @@
     </button>
 
     <p>
-      Warning #1: Monaco editor supports only one global theme. When you change any instance's
-      theme, all monaco instances will be destroyed and recreated with the new theme. This is a
-      limitation of monaco editor (<a href="https://github.com/Microsoft/monaco-editor/issues/338">
+      <b>Warning #1:</b> Monaco editor supports only one global theme. When you change any
+      instance's theme, all monaco instances will be destroyed and recreated with the new theme.
+      This is a limitation of monaco editor (<a
+        href="https://github.com/Microsoft/monaco-editor/issues/338"
+      >
         See issue #338 </a
       >).
     </p>
 
     <p>
-      Warning #2: Yes, there are some hacks but monaco editor still getting updates and you should
-      be carteful while using these short term fixes.
+      <b>Warning #2:</b> Yes, there are some hacks but monaco editor still getting updates and you
+      should be carteful while using these short term fixes.
     </p>
 
     <p>
-      Warning #3: Some textmate grammars and syntax themes may not properly work with dark or light
-      editor themes. You should adjust them accordingly.
+      <b>Warning #3:</b> Some textmate grammars and syntax themes may not properly work with dark or
+      light editor themes. You should adjust them accordingly.
     </p>
   </div>
 
