--- a/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
+++ b/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
@@ -1,13 +1,17 @@
 <section>
   <h3>Switch Language Exmaple</h3>
 
-  <p>
-    <b>Warning #1:</b> Syntax highlighting is dependent on the loaded textmate grammars. If you want
-    to display specific language syntax highlighting, you should load the related textmate grammar.
-    Check the
-    <a href="https://github.com/ngeenx/monaco-textmate-loader"> monaco-textmate-loader </a> repo for
-    more details.
-  </p>
+  <ul>
+    <li>
+      <mark>
+        <b>Warning #1:</b> Syntax highlighting is dependent on the loaded textmate grammars. If you
+        want to display specific language syntax highlighting, you should load the related textmate
+        grammar. Check the
+        <a href="https://github.com/ngeenx/monaco-textmate-loader"> monaco-textmate-loader </a> repo
+        for more details.
+      </mark>
+    </li>
+  </ul>
 
   <div>
     <button (click)="changeLanguage()">
