Improve switch language warning note

--- a/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
+++ b/projects/editor-tester/src/app/examples/switch-language/switch-language.component.html
@@ -6,9 +6,11 @@
       <mark>
         <b>Warning #1:</b> Syntax highlighting is dependent on the loaded textmate grammars. If you
         want to display specific language syntax highlighting, you should load the related textmate
-        grammar. Check the
+        grammars (<i>for highlighting definitions</i>), competible vs-code themes (<i
+          >for colorization</i
+        >). Also, check the
         <a href="https://github.com/ngeenx/monaco-textmate-loader"> monaco-textmate-loader </a> repo
-        for more details.
+        for more details (we are using as a dependency in this package).
       </mark>
     </li>
   </ul>
