--- a/projects/editor-tester/src/app/examples/theme-switch-example/theme-switch-example.component.html
+++ b/projects/editor-tester/src/app/examples/theme-switch-example/theme-switch-example.component.html
@@ -4,7 +4,7 @@
   <ul>
     <li>
       <mark>
-        <b>Warning #1:</b> Monaco editor supports only one global theme. When you change any
+        <b>Warning #1:</b> Monaco editor supports only one global theme. When you changed any
         instance's theme, all monaco instances will be destroyed and recreated with the new theme.
         This is a limitation of monaco editor (<a
           href="https://github.com/Microsoft/monaco-editor/issues/338"
@@ -23,8 +23,8 @@
 
     <li>
       <mark>
-        <b>Warning #3:</b> Some textmate grammars and syntax themes may not properly work with dark
-        or light editor themes. You should adjust them accordingly.
+        <b>Warning #3:</b> Some textmate grammars and themes may not properly work with dark or
+        light editor themes. You should adjust them accordingly.
       </mark>
     </li>
   </ul>
