--- a/projects/editor-tester/src/styles.scss
+++ b/projects/editor-tester/src/styles.scss
@@ -50,15 +50,17 @@ button {
 ul {
   display: flex;
   flex-direction: column;
-  gap: 30px;
+  gap: 5px;
   margin: 40px 0px;
   padding: 0px 20px;
 
   li {
     mark {
       padding: 10px;
+      line-height: 40px;
       border-radius: 5px;
       background-color: #ded523;
+      white-space: pre-wrap;
     }
   }
 }
