Improve splitter example description

--- a/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
+++ b/projects/editor-tester/src/app/examples/splitter-example/splitter-example.component.html
@@ -4,6 +4,7 @@
   <p>
     This example shows how to use the
     <a href="https://github.com/angular-split/angular-split" target="_blank"> Angular Splitter </a>
+    with monaco editor and preview area.
   </p>
 
   <div>
